--- a/backend/.env.template
+++ b/backend/.env.template
@@ -12,7 +12,8 @@ PORT=3000
 HOST=0.0.0.0
 NODE_ENV=development
 
-# CORS Configuration (Frontend URLs)
+# CORS Configuration (comma-separated origins)
+CORS_ORIGINS=http://localhost:5173,http://localhost:5174
 FRONTEND_URL=http://localhost:5173
 
 # Logging
