--- a/mcp/package.json
+++ b/mcp/package.json
@@ -12,7 +12,7 @@
   "description": "",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.17.0",
-    "sqlite3": "^5.1.7",
+    "express": "^5.1.0",
     "zod": "^3.25.76"
   }
 }
